--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <div class="container px-0">
+    <div class="container-fluid px-0">
       <header class="">
         <nav class="navbar navbar-expand-md fs-5 bg-light">
           <div class="container-fluid">
