--- a/index.html
+++ b/index.html
@@ -66,100 +66,183 @@
           </div>
         </nav>
       </header>
-      <!--  -->
-      <div class="row py-5 my-5 mx-0 px-0">
-        <div class="text-center">
-          <!-- icons -->
-          <div class="fs-4">
-            <i
-              class="bi bi-facebook border border-danger fw-bold p-2 rounded-circle me-2"
-            ></i>
-            <i
-              class="bi bi-twitter border border-danger fw-bold p-2 rounded-circle"
-            ></i>
-            <i
-              class="bi bi-instagram border border-danger fw-bold p-2 rounded-circle"
-            ></i>
-            <i
-              class="bi bi-linkedin border border-danger fw-bold p-2 rounded-circle"
-            ></i>
-          </div>
-          <!-- end icons -->
-
-          <h1 class="display-5 fw-bold py-3">I am first name and last name</h1>
-          <p class="fs-4">
-            i'm Jonathan, professional web developer with long time experience
-            in this field​
-          </p>
-
-          <button class="btn btn-primary btn-lg" type="button">
-            Voir mon cv
-          </button>
-          <button class="btn btn-primary btn-lg" type="button">
-            telecharger mon cv
-          </button>
-        </div>
-      </div>
-
-      <div class="row text-center mx-0 px-0">
-        <div class="col-md-6 offset-md-3">
-          <!-- <p class="text-danger">services</p> -->
-          <h1 class="fw-bold display-4">About Me</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
-            quos sint velit commodi vitae error deleniti dolor aperiam est
-            earum.
-          </p>
-          <div class="d-flex justify-content-center">
-            <div class="m-3" id="separator"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-5">
-            <img
-              src="assets/images/photo-format-png-6.png"
-              width="200px"
-              alt="photo de profil"
-            />
-          </div>
-          <div class="col-md-7 text-start">
-            <h1>Hi , There</h1>
-
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
-              temporibus quisquam placeat non officia quia perspiciatis
-              praesentium, cumque exercitationem voluptas harum laboriosam
-              deserunt dicta natus tempore earum omnis saepe at.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur?
-            </p>
-
-            <div class="row">
-              <div class="col mb-3">
-                <span class="text-danger">Name :</span> <br />
-                Gneba latif idriss junior
+      <main>
+        <section>
+          <!--  -->
+          <div class="row py-5 my-5 mx-0 px-0">
+            <div class="text-center">
+              <!-- icons -->
+              <div class="fs-4">
+                <i
+                  class="bi bi-facebook border border-danger fw-bold p-2 rounded-circle me-2"
+                ></i>
+                <i
+                  class="bi bi-twitter border border-danger fw-bold p-2 rounded-circle"
+                ></i>
+                <i
+                  class="bi bi-instagram border border-danger fw-bold p-2 rounded-circle"
+                ></i>
+                <i
+                  class="bi bi-linkedin border border-danger fw-bold p-2 rounded-circle"
+                ></i>
               </div>
-              <div class="col">
-                <span class="text-danger">Phone :</span> <br />
-                +225 0564685613
-              </div>
-            </div>
+              <!-- end icons -->
 
-            <div class="row">
-              <div class="col">
-                <span class="text-danger">Email :</span> <br />
-                juniorgneba@gmail.com
-              </div>
-              <div class="col">
-                <span class="text-danger">linkedIn :</span> <br />
-                none
-              </div>
+              <h1 class="display-5 fw-bold py-3">
+                I am first name and last name
+              </h1>
+              <p class="fs-4">
+                i'm Jonathan, professional web developer with long time
+                experience in this field​
+              </p>
+
+              <button class="btn btn-primary btn-lg" type="button">
+                Voir mon cv
+              </button>
+              <button class="btn btn-primary btn-lg" type="button">
+                telecharger mon cv
+              </button>
             </div>
           </div>
-        </div>
-      </div>
+        </section>
+        <section>
+          <div class="row text-center mx-0 px-0">
+            <div class="col-md-6 offset-md-3">
+              <!-- <p class="text-danger">services</p> -->
+              <h1 class="fw-bold display-4">About Me</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Assumenda quos sint velit commodi vitae error deleniti dolor
+                aperiam est earum.
+              </p>
+              <div class="d-flex justify-content-center">
+                <div class="m-3" id="separator"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-5">
+                <img
+                  src="assets/images/photo-format-png-6.png"
+                  width="200px"
+                  alt="photo de profil"
+                />
+              </div>
+              <div class="col-md-7 text-start">
+                <h1>Hi , There</h1>
+
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Beatae temporibus quisquam placeat non officia quia
+                  perspiciatis praesentium, cumque exercitationem voluptas harum
+                  laboriosam deserunt dicta natus tempore earum omnis saepe at.
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Consectetur?
+                </p>
+
+                <div class="row">
+                  <div class="col mb-3">
+                    <span class="text-danger">Name :</span> <br />
+                    Gneba latif idriss junior
+                  </div>
+                  <div class="col">
+                    <span class="text-danger">Phone :</span> <br />
+                    +225 0564685613
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col">
+                    <span class="text-danger">Email :</span> <br />
+                    juniorgneba@gmail.com
+                  </div>
+                  <div class="col">
+                    <span class="text-danger">linkedIn :</span> <br />
+                    none
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <br />
+        <br />
+        <section>
+          <div class="container">
+            <div class="row p-0 m-0">
+              <div class="col-md-6">
+                I'M EXPERT ON
+                <h1 class="fw-bold">
+                  Let's Work <br />
+                  Together
+                </h1>
+                <div>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Recusandae velit rem id. Commodi nostrum minus laboriosam
+                  totam, eos esse delectus molestiae maxime dolorum accusantium
+                  ratione optio officia amet! At, eaque.
+                </div>
+              </div>
+              <div class="col-md-6">
+                <br />
+                Node Js
+                <div class="progress" style="height: 8px">
+                  <div
+                    class="progress-bar bg-danger"
+                    role="progressbar"
+                    aria-label="Success example"
+                    style="width: 88%"
+                    aria-valuenow="88"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+                <br />
+                Python
+                <div class="progress" style="height: 8px">
+                  <div
+                    class="progress-bar bg-info"
+                    role="progressbar"
+                    aria-label="Info example"
+                    style="width: 81%"
+                    aria-valuenow="81"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+                <br />
+                Laravel
+                <div class="progress" style="height: 8px">
+                  <div
+                    class="progress-bar bg-warning"
+                    role="progressbar"
+                    aria-label="Warning example"
+                    style="width: 70%"
+                    aria-valuenow="70"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+                <br />
+                SEO
+                <div class="progress" style="height: 8px">
+                  <div
+                    class="progress-bar bg-danger"
+                    role="progressbar"
+                    aria-label="Danger example"
+                    style="width: 90%"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+            </div>
+            <button class="btn btn-primary">Hire Me NOW</button>
+          </div>
+        </section>
+      </main>
     </div>
 
     <!-- <script src="assets/bootstrap-5.3.0-alpha3-dist/js/bootstrap.bundle.js"></script> -->
