--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@
               <div class="col-lg-4">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Localisation</h5>
+                    <h5 class="card-title">
+                      <i class="bi bi-geo-alt-fill me-2"></i>Localisation
+                    </h5>
                     <p class="card-text">Abidjan , Yopougon Annaneraie</p>
                   </div>
                 </div>
@@ -391,7 +393,9 @@
               <div class="col-lg-4">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Appellez-moi</h5>
+                    <h5 class="card-title">
+                      <i class="bi bi-telephone-fill me-2"></i> Appellez-moi
+                    </h5>
                     <p class="card-text">Mobile: +225-074-935-2214</p>
                   </div>
                 </div>
@@ -399,7 +403,9 @@
               <div class="col-lg-4">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Adresse E-mail</h5>
+                    <h5 class="card-title">
+                      <i class="bi bi-envelope-fill me-2"></i>Adresse E-mail
+                    </h5>
                     <p class="card-text">diakite.cheikh200@gmail.com</p>
                   </div>
                 </div>
