espacement , centrage et ajout icones

--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
         </section>
         <section>
           <div class="container">
-            <div class="row">
-              <div class="col-md-4">
+            <div class="row d-flex justify-content-center">
+              <div class="col-auto">
                 <div class="card" style="width: 18rem">
                   <img
                     src="assets/images/projet.jpg"
@@ -280,7 +280,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-auto">
                 <div class="card" style="width: 18rem">
                   <img
                     src="assets/images/projet.jpg"
@@ -297,7 +297,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-auto">
                 <div class="card" style="width: 18rem">
                   <img
                     src="assets/images/projet.jpg"
@@ -314,7 +314,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-auto">
                 <div class="card mt-3" style="width: 18rem">
                   <img
                     src="assets/images/projet.jpg"
@@ -331,7 +331,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-auto">
                 <div class="card mt-3" style="width: 18rem">
                   <img
                     src="assets/images/projet.jpg"
@@ -348,7 +348,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-auto">
                 <div class="card mt-3" style="width: 18rem">
                   <img
                     src="assets/images/projet.jpg"
